# ComfyUI-nunchaku-XPU

./: README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
docs/: XPU.md
model_base/: qwenimage.py
model_patcher/: zimage.py
models/: qwenimage.py  zimage.py
nodes/lora/: flux.py
nodes/models/: flux.py  ipadapter.py  pulid.py  qwenimage.py  text_encoder.py  zimage.py
nodes/tools/: merge_safetensors.py
tests/workflows/nunchaku-z-image-turbo/: api_xpu.json  test_cases.json  workflow_xpu.json
wrappers/: flux.py
xpu_backend/: __init__.py  device.py  flux_transformer.py  linear.py  offload.py  ops.py
